terraform-aws-vpc/public_subnet.tf
// Create the Internet Gateway
resource "aws_internet_gateway" "igw" {
  vpc_id                  = aws_vpc.vpc.id
  tags                    = merge(
    local.common_tags,
    {
      Name = "${local.name_prefix}-igw"
    },
    {
      Lifecycle = "Common Infrasctructure"
    }
  )
}

// Create the Route table
resource "aws_route_table" "public" {
  vpc_id                  = aws_vpc.vpc.id
  tags                    = merge(
    local.common_tags,
    {
      Name = "${local.name_prefix}-rt-public"
    },
    {
      Lifecycle = "Common Infrasctructure"
    },
    {
      Tier = "public"
    }
  )
}

// Create the point to create the Route Table
resource "aws_route" "public_routes" {
  route_table_id          = aws_route_table.public.id
  destination_cidr_block  = "0.0.0.0/0"
  gateway_id              = aws_internet_gateway.igw.id
}

// Create the Public Subnet
resource "aws_subnet" "public_subnet" {
  for_each = local.public_sn_idx_map

  vpc_id                  = aws_vpc.vpc.id
  cidr_block              = each.key
  availability_zone       = element(data.aws_availability_zones.azs.names, var.dual_az_only ? each.value % 2 : each.value % length(data.aws_availability_zones.azs.names))
  map_public_ip_on_launch = var.map_public_ip_on_launch
  tags                    = merge(
    local.common_tags,
    {
      Name = "${local.name_prefix}-sn-public-${each.value}"
    },
    {
      Lifecycle = "Common Infrasctructure"
    },
    {
      Tier = "public"
    }
  )
}

// Create the Route Table

resource "aws_route_table_association" "public" {
  for_each                = aws_subnet.public_subnet
  subnet_id               = each.value.id
  route_table_id          = aws_route_table.public.id
}
